[package]
name = "async-api-aggregator"
version = "0.1.0"
edition = "2021"

[lib]
name = "async_api_aggregator"
path = "src/lib.rs"

[[bin]]
name = "async-api-aggregator"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with JSON support
reqwest = { version = "0.13.1", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities for concurrent execution
futures = "0.3"

# Error handling
thiserror = "2.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional: Lambda support (uncomment for deployment)
# lambda_runtime = "0.13"

[dev-dependencies]
tokio-test = "0.4"
