[package]
name = "pg-encrypted-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"          # For key derivation
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Error handling & logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI for demo
clap = { version = "4", features = ["derive"] }

# Environment
dotenvy = "0.15"
