[package]
name = "pqfilter"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for filtering and transforming Parquet files"
authors = ["Sir John The One"]

[[bin]]
name = "pqfilter"
path = "src/main.rs"

[dependencies]
polars = { version = "0.48", features = ["lazy", "parquet", "csv", "json", "dtype-date", "dtype-datetime", "dtype-time", "dtype-duration", "strings", "regex", "is_in", "round_series", "abs", "log", "random"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
