[package]
name = "rotating-cube"
version = "0.1.0"
edition = "2021"
authors = ["Sir John The One"]
description = "A simple 3D rotating cube using wgpu"

[[bin]]
name = "cube"
path = "src/main.rs"

[[bin]]
name = "dodecahedron"
path = "src/bin/dodecahedron.rs"

[[bin]]
name = "ring"
path = "src/bin/ring.rs"

[dependencies]
wgpu = "28.0.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.30.10"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true