[package]
name = "crypto-sentiment"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
