[package]
name = "s3-dynamo-lambda"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3_dynamo_lambda"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# AWS Lambda runtime
lambda_runtime = "1.0.2"

# AWS SDK - using latest stable versions
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-sdk-dynamodb = "1.55"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

# Error handling
thiserror = "2.0.18"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.11" # A simple logger implementation