[package]
name = "s3-dynamo-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
aws-sdk-dynamodb = "1.13"

# Lambda runtime
lambda_runtime = "1.0.2"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["s3"] }

# Async runtime
tokio = { version = "1", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
