[package]
name = "ssm-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
